--- a/app/scss/_story.scss
+++ b/app/scss/_story.scss
@@ -18,16 +18,17 @@
     font-size: 22px;
     letter-spacing: 1.1px;
     color: #413d4b;
-    margin-bottom: 20px;
+    margin-bottom: 17px;
 }
 .story__text{
     line-height: 22px;
     font-size: 14px;
     color: #413d4b;
     letter-spacing: 0.42px;
+    padding-bottom: 22px;
 }
 .story__btn{
-    margin-top: 45px;
+    margin-top: 5px;
 }
 .watch{
     background-image: url(../img/play-fon.jpg);
