--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -6,8 +6,9 @@
 @import "header";
 @import "story";
 @import "services";
-
-
-
+@import "team";
+@import "works";
+@import "news";
+@import "quote";
 
 @import "media";
