--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,45 +1,50 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-body{
-    font-family: $roboto;
-    font-size: 14px;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
+body {
+  font-family: $roboto;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
 }
-a{
-    display: inline-block;
-    text-decoration: none;
+a {
+  display: inline-block;
+  text-decoration: none;
 }
-ul{
-    list-style: none;
-    padding: 0;
-    margin: 0;
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
-li{
-    padding: 0;
+li {
+  padding: 0;
 }
-p{
-    padding: 0;
-    margin: 0;
+p {
+  padding: 0;
+  margin: 0;
 }
-.container{
-    max-width: 970px;
-    padding: 0 15px;
-    margin: 0 auto;
+.container {
+  max-width: 970px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
-h1,h2,h3,h4,h5,h6{
-    padding: 0;
-    margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  padding: 0;
+  margin: 0;
 }
-.default__btn{
-    font-family: $ham;
-    font-weight: 400;
-    color:#00e0d0;
-    font-size: 16px;
-    outline: none;
-    text-transform: uppercase;
-    border: 1px solid #00e0d0;
-    padding: 10px 14px;
+.default__btn {
+  font-family: $ham;
+  font-weight: 400;
+  color: #00e0d0;
+  font-size: 16px;
+  outline: none;
+  text-transform: uppercase;
+  border: 1px solid #00e0d0;
+  padding: 10px 14px;
 }
