--- a/app/scss/_quote.scss
+++ b/app/scss/_quote.scss
@@ -1,20 +1,20 @@
 @import "vars";
-.quote-block{
-    background-image: url(../img/bg.jpg);
-    min-height: 500px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    padding: 130px 0px 65px;
+.quote-block {
+  background-image: url(../img/bg.jpg);
+  min-height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  padding: 130px 0px 65px;
 }
-.quote-block__text{
-    font-size: 16px;
-    font-family: $play;
-    font-weight: 400;
-    color: #fff;
-    opacity: .85;
-    line-height: 26px;
-    letter-spacing: 0.4px;
-    margin-bottom: 40px;
+.quote-block__text {
+  font-size: 16px;
+  font-family: $play;
+  font-weight: 400;
+  color: #fff;
+  opacity: 0.85;
+  line-height: 26px;
+  letter-spacing: 0.4px;
+  margin-bottom: 40px;
 }
