--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,5 +1,5 @@
 // Fonts
-$roboto: 'Roboto', sans-serif;
-$play: 'Playfair Display', serif;
-$ham: 'Hammersmith One', sans-serif;
+$roboto: "Roboto", sans-serif;
+$play: "Playfair Display", serif;
+$ham: "Hammersmith One", sans-serif;
 // Colors
